# alarm-tg-bot

./: .gitignore  Pipfile  README.md  db.py  dodo.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  setup.cfg  test.sh
AlarmCallBot/: __init__.py  __main__.py
AlarmCallBot/bot/: Bot.py  Utils.py
AlarmCallBot/configs/: Config.py
AlarmCallBot/zvonok_api/: Api.py
bot/: Bot.py  Messages.py  Utils.py
configs/: Config.py
docs/: bot.rst  conf.py  db.rst  index.rst  zvonok_api_Api.rst
po/ru_RU.UTF-8/LC_MESSAGES/: bot.po
tests/: test_db.py  test_zvonok_manager_class.py
zvonok_api/: Api.py  Utils.py
